feat - #88: 모든 Controller 기능 구현